git commit -m "update"

--- a/QuanLyDeTai/Views/Shared/_LayoutTeacher.cshtml
+++ b/QuanLyDeTai/Views/Shared/_LayoutTeacher.cshtml
@@ -20,7 +20,7 @@
             <div class="container">
                 <div id="banner">
                     <div id="login-area">
-                        <a data-toggle="modal" href="#dang_nhap"><img src="~/Content/img/Login-icon.png" width="24" height="24" /> Đăng nhập</a>
+                        <a data-toggle="modal" href="#dang_nhap"><img src="~/Content/images/Login-icon.png" width="24" height="24" /> Đăng nhập</a>
 
 
 
@@ -43,35 +43,35 @@
                                     </div>
 
                                     <a href="/Home/Index" class="list-group-item">
-                                        <img src="~/Content/img/house-icon.png" width="24" height="24" /><span class="pull-right"><i class="icon-chevron-right"></i></span> Trang Chủ
+                                        <img src="~/Content/images/house-icon.png" width="24" height="24" /><span class="pull-right"><i class="icon-chevron-right"></i></span> Trang Chủ
                                     </a>
                                     <a href="/Home/LoaiDeTai" class="list-group-item ">
-                                        <img src="~/Content/img/Actions-view-calendar-list-icon.png" width="24"
+                                        <img src="~/Content/images/Actions-view-calendar-list-icon.png" width="24"
                                              height="24" /><span class="pull-right">
                                             <i class="icon-chevron-right"></i>
                                         </span> Danh sách đề tài
                                     </a>
                                     <a href="/Home/ThongTinGiangVien" class="list-group-item ">
-                                        <img src="~/Content/img/Teacher-icon.png" width="24" height="24" /><span class="pull-right"><i class="icon-chevron-right"></i></span> Thông tin giảng
+                                        <img src="~/Content/images/Teacher-icon.png" width="24" height="24" /><span class="pull-right"><i class="icon-chevron-right"></i></span> Thông tin giảng
                                         viên
                                     </a>
                                     <a href="/Home/ThongTinSinhVien" class="list-group-item ">
-                                        <img src="~/Content/img/Student-3-icon.png" width="24"
+                                        <img src="~/Content/images/Student-3-icon.png" width="24"
                                              height="24" /><span class="pull-right">
                                             <i class="icon-chevron-right"></i>
                                         </span> Thông tin sinh viên
                                     </a>
                                     <a href="/Home/HuongDanDangKy" class="list-group-item ">
-                                        <img src="~/Content/img/Actions-help-contents-icon.png" width="24"
+                                        <img src="~/Content/images/Actions-help-contents-icon.png" width="24"
                                              height="24" /><span class="pull-right">
                                             <i class="icon-chevron-right"></i>
                                         </span> Hướng dẫn đăng ký
                                     </a>
                                     <a href="/Home/ThongKe" class="list-group-item ">
-                                        <img src="~/Content/img/chart-icon.png" width="24" height="24" /><span class="pull-right"><i class="icon-chevron-right"></i></span> Thống kê
+                                        <img src="~/Content/images/chart-icon.png" width="24" height="24" /><span class="pull-right"><i class="icon-chevron-right"></i></span> Thống kê
                                     </a>
                                     <a data-toggle="modal" href="#seach_box" class="list-group-item">
-                                        <img src="~/Content/img/Search-icon.png" width="24" height="24" /><span class="pull-right"><i class="icon-chevron-right"></i></span> Tìm kiếm
+                                        <img src="~/Content/images/Search-icon.png" width="24" height="24" /><span class="pull-right"><i class="icon-chevron-right"></i></span> Tìm kiếm
                                     </a>
                                 </div><!-- /panel-default -->
                             </div>
