--- a/LOGIN/style.css
+++ b/LOGIN/style.css
@@ -16,7 +16,7 @@ body{
 #page{
     width: 1440px;
     height: 785px;
-    background: #0d0f1a;
+    background: #539933;
     position: relative;
     display: flex;
     justify-content: center;
